@@ -1,6 +1,10 @@
 = Pendiente
  * Agregar los mensajes que faltan
 
+= v00007f =
+@ 26/04/2018 - AGALAZ
+ * Se cambió tMovim cod_endoso,codendoso -> endoso,cod_endoso
+
 = v00007e =
 @ 22/03/2018 - AGALAZ
  * No sincro se llama a Control Fecha con Periodo=0
